core/roboconf-core/src/test/resources/configurations/valid/component-optional-imports.graph
A {
	alias: A component called A;
	installer: bash;
	exports: port, ip;
	imports: A.port (optional), A.ip (optional);
}