core/roboconf-core/src/test/resources/configurations/invalid/component-with-invalid-random-port.graph

comp2 {
	installer: target;
	exports: ip, random[port] httpPort, random[string] ajpPort;
}
